# ModernesCppSource

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  a.out  conceptsPlaceholder.cpp  promiseFuture.cpp  sharedFuture.cpp  templateIntroduction.cpp
source/: .directory  AutomaticReturnTypeConcepts.cpp  BedingungsvariablenVersusTasks.cpp  CMakeLists.txt  Iostreams.cpp  MyClass.cpp  MyClass.h  MyInt.cpp  MyInt2.cpp  MyInt3.cpp  MyInt4.cpp  MyIntAsKey.cpp  OngoingOptimizationSequentialConsistency.cpp  Program1.cpp  Program2.cpp  Program3.cpp  Program4.cpp  Program5.cpp  SIMD.cpp  accociativeContainers.cpp  account.cpp  accountIsSmaller1.cpp  accountIsSmaller2.cpp  accountIsSmaller3.cpp  accountRegular.cpp  accountSemiRegular.cpp  accountThread.cpp  accountThreadsAtomic.cpp  acquireConsume.cpp  acquireRelease.cpp  acquireReleaseFences.cpp  acquireReleaseWithWaiting.cpp  acquireReleaseWithoutWaiting.cpp  activeObject.cpp  adapterClass.cpp  adapterObject.cpp  addLambdaGeneric.cpp  addMoney.cpp  addUnconstrainedConstrained.cpp  adl.cpp  (+807 more)
source/TemplatesGetInsights/: number.cpp  templates.odp
